--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Description",
   "license": "UNLICENSED",
-  "dependencies": {
+  "devDependencies": {
     "coffee-script": "^1.10.0",
     "connect": "^3.4.1",
     "gulp": "~3.9.0",
